# src/main/java/br/edu/utfpr/tsi/xenon/application/handler/DefaultHandlerError.java
@@ -10,11 +10,16 @@ import br.edu.utfpr.tsi.xenon.application.dto.ErrorDetailsDto;
 import br.edu.utfpr.tsi.xenon.application.dto.ErrorDto;
 import br.edu.utfpr.tsi.xenon.structure.exception.BusinessException;
 import br.edu.utfpr.tsi.xenon.structure.exception.ResourceNotFoundException;
+import java.util.List;
 import java.util.stream.Collectors;
 import javax.servlet.http.HttpServletRequest;
+import javax.validation.ConstraintViolationException;
+import javax.validation.Path;
 import lombok.RequiredArgsConstructor;
 import lombok.extern.slf4j.Slf4j;
 import org.springframework.context.MessageSource;
+import org.springframework.data.util.StreamUtils;
+import org.springframework.http.HttpHeaders;
 import org.springframework.http.HttpStatus;
 import org.springframework.http.ResponseEntity;
 import org.springframework.web.bind.MethodArgumentNotValidException;
@@ -43,16 +48,7 @@ public class DefaultHandlerError implements EndpointsTranslator {
                     .field(field);
             }).collect(Collectors.toList());
 
-        var path = request.getServletPath();
-        var locale = getLocale(request.getHeader("accept-language"));
-        var message = getMessage(ARGUMENT_INVALID.getCode(), locale);
-        var error = new ErrorDto()
-            .details(errorsDetails)
-            .message(message)
-            .path(path)
-            .statusCode(HttpStatus.BAD_REQUEST.value());
-
-        return ResponseEntity.badRequest().body(error);
+        return getErrorBaseDtoResponseEntity(request, errorsDetails);
     }
 
     @ExceptionHandler(ResourceNotFoundException.class)
@@ -61,7 +57,7 @@ public class DefaultHandlerError implements EndpointsTranslator {
         HttpServletRequest request) {
         log.error("e-mail já existe: {}", exception.getMessage());
         var path = request.getServletPath();
-        var locale = getLocale(request.getHeader("accept-language"));
+        var locale = getLocale(request.getHeader(HttpHeaders.ACCEPT_LANGUAGE));
         var message = getMessage(
             RESOURCE_NOT_FOUND.getCode(),
             locale, exception.getResourceName(),
@@ -82,7 +78,7 @@ public class DefaultHandlerError implements EndpointsTranslator {
 
         log.error("erro de negócio: {}", exception.getMessage());
         var path = request.getServletPath();
-        var locale = getLocale(request.getHeader("accept-language"));
+        var locale = getLocale(request.getHeader(HttpHeaders.ACCEPT_LANGUAGE));
         var message = getMessage(
             exception.getCode(),
             locale,
@@ -96,8 +92,45 @@ public class DefaultHandlerError implements EndpointsTranslator {
         return ResponseEntity.status(HttpStatus.valueOf(exception.getStatus())).body(error);
     }
 
+    @ExceptionHandler(ConstraintViolationException.class)
+    public ResponseEntity<ErrorBaseDto> constraintViolationException(
+        ConstraintViolationException exception,
+        HttpServletRequest request) {
+
+        var errors = exception.getConstraintViolations().stream()
+            .map(constraintViolation -> {
+                var field = fieldNameFromPropertyPath(constraintViolation.getPropertyPath());
+                var msg = constraintViolation.getMessage();
+                return new ErrorDetailsDto()
+                    .descriptionError(msg)
+                    .field(field);
+            }).collect(Collectors.toList());
+
+        return getErrorBaseDtoResponseEntity(request, errors);
+    }
+
+    private ResponseEntity<ErrorBaseDto> getErrorBaseDtoResponseEntity(HttpServletRequest request,
+        List<ErrorDetailsDto> errors) {
+        var path = request.getServletPath();
+        var locale = getLocale(request.getHeader(HttpHeaders.ACCEPT_LANGUAGE));
+        var message = getMessage(ARGUMENT_INVALID.getCode(), locale);
+        var error = new ErrorDto()
+            .details(errors)
+            .message(message)
+            .path(path)
+            .statusCode(HttpStatus.BAD_REQUEST.value());
+
+        return ResponseEntity.badRequest().body(error);
+    }
+
     @Override
     public MessageSource getMessageSource() {
         return messageSource;
+    }
+
+    private String fieldNameFromPropertyPath(Path path) {
+        var list = StreamUtils.createStreamFromIterator(path.iterator()).toList();
+
+        return list.get(list.size() - 1).getName();
     }
 }
